<resources>
    <string name="app_name">Word Jam</string>
    <string name="build_no">14</string>
    <string name="version_no">2.2.0</string>
    <string name="version_str">Version %1$s</string>
    <string name="app_id">250781401741665</string>
    <string name="publish_on_facebook">Publish to Facebook Timeline</string>
    <string name="facebook_publish_success">Posted to Facebook!</string>
    <string name="facebook_publish_failure">There was a problem posting to Facebook, please try again later</string>
    <string name="connecting_to_facebook_message">Posting...</string>
    <string name="word_type_verbs">Verbs</string>
    <string name="word_type_adjectives">Adjectives</string>
    <string name="word_type_people">People</string>
    <string name="word_type_processes">Processes</string>
    <string name="word_type_attributes">Attributes</string>
    <string name="word_type_objects">Objects</string>
    <string name="games_label">Games</string>
    <string name="options_label">Options</string>
    <string name="about_label">About</string>
    <string name="words_label">Words</string>
    <string name="copyright_label">(C) 2013 - Present</string>
    <string name="company_label">Gaurav Jain (@gauravdelphinus)</string>
    <string name="play_label">Play</string>
    <string name="practice_label">Practice</string>
    <string name="lookup_label">Lookup</string>
    <string name="activity_practice_level_selection_subtitle_text">Practice Levels</string>
    <string name="practice_type_easy">Very Easy</string>
    <string name="practice_type_medium">Easy</string>
    <string name="practice_type_hard">Hard</string>
    <string name="practice_type_very_hard">Very Hard</string>
    <string name="practice_levels_title_text">Word Difficulty</string>
    <string name="app_error_str">We\'re really sorry!  An error was encountered during initialization.  Possible cause could be that your device does not have enough disk space.  Please exit the application, and try launching it again to see if that fixes the issue.  If the issue persists, please do contact us at ezeeideas@gmail.com with details about your device and configuration and we will try out best to help resolve the issue.  Thanks.</string>
    <string name="wordlist_title">Word List</string>
    <string name="no_words">No Words</string>
    <string name="play_chooser_title_label">Challenges</string>
    <string name="english_challenge_label">English Mega Challenge</string>
    <string name="gre_challenge_label">GRE Cruncher</string>
    <string name="sat_challenge_label">SAT Cracker</string>
    <string name="kids_challenge_label">Kids Vocabulary Challenge</string>
    <string name="english_challenge_title_label">English Mega Challenge</string>
    <string name="activity_level_home_subtitle_text">Level %1$d</string>
    <string name="level_name">Level %1$d</string>
    <string name="resume_game_button_label">Resume Previous Game</string>
    <string name="new_game_button_label">Start New Game</string>
    <string name="saved_games_button_label">View Saved Games</string>
    <string name="points_summary_button_label">Points Summary</string>
    <string name="game_selection_title">Game Selection</string>
    <string name="level_number_label">Level %1$d</string>
    <string name="practice_type_label">Difficulty: %1$s</string>
    <string name="game_selection_action_text_play">Select a game to play</string>
    <string name="game_selection_action_text_practice">Select a game to practice</string>
    <string name="recall_words_label">Recall Words</string>
    <string name="match_words_label">Match Words</string>
    <string name="hangman_label">Hang-man</string>
    <string name="crossword_label">Cross-word</string>
    <string name="word_jumble_label">Word Jumble</string>
    <string name="word_search_label">Word Search</string>
    <string name="recall_words_name">RECALL WORDS</string>
    <string name="match_words_name">MATCH WORDS</string>
    <string name="hangman_name">HANGMAN</string>
    <string name="crossword_name">CROSSWORD</string>
    <string name="word_jumble_name">WORD JUMBLE</string>
    <string name="word_search_name">WORD SEARCH</string>
    <string name="level_selection_heading">Levels</string>
    <string name="level_selection_subtitle_text">Levels</string>
    <string name="level_1_label">Level 1</string>
    <string name="level_2_label">Level 2</string>
    <string name="level_3_label">Level 3</string>
    <string name="level_4_label">Level 4</string>
    <string name="level_5_label">Level 5</string>
    <string name="level_6_label">Level 6</string>
    <string name="points_in_game">%1$d + Points</string>
    <string name="jumbletest_title">WORD JUMBLE</string>
    <string name="wordmeaningtest_title">RECALL WORDS</string>
    <string name="matchwordstest_title">MATCH WORDS</string>
    <string name="hangmantest_title">HANGMAN</string>
    <string name="crosswordtest_title">CROSSWORD</string>
    <string name="wordsearchtest_title">WORD SEARCH</string>
    <string name="stop_game_text">Stop Game</string>
    <string name="pause_game_text">Pause Game</string>
    <string name="giveup_game_text">Give Up Game</string>
    <string name="use_hint_text">Use Hint</string>
    <string name="share_game_text">Share Game</string>
    <string name="previous_game_text">Previous Game</string>
    <string name="next_game_text">Next Game</string>
    <string name="help_game_text">Help</string>
    <string name="share_text">Share Game</string>
    <string name="game_header">%1$s, Level %2$d</string>
    <string name="game_level_label">Level %1$d</string>
    <string name="game_points_label">Pts: %1$d</string>
    <string name="test_success">Right Answer!</string>
    <string name="test_fail">Wrong answer! The correct answer is: %1$s</string>
    <string name="testnumber">Puzzle No. %1$d</string>
    <string name="currentscore">Current Score: %1$d / %2$d</string>
    <string name="hangman_wrong_answer">Sorry, tough luck!  The answer is: %1$s</string>
    <string name="across_hints">Across</string>
    <string name="down_hints">Down</string>
    <string name="keypad_title">Keypad</string>
    <string name="game_heading">%1$s  #%2$d</string>
    <string name="setup_game_progress_title"></string>
    <string name="fill_horizontal_text">Fill Across</string>
    <string name="fill_vertical_text">Fill Down</string>
    <string name="close_keypad_text">Close Keypad</string>
    <string name="brought_to_you_by_text">EzeeIdeas.com, Brighter Ideas for a Brighter Life</string>
    <string name="copyright_text">Copyright (C) 2013 - Present, Gaurav Jain (@gauravdelphinus).  All rights reserved.</string>
    <string name="wordnet_copyright_text">WordNet database Copyright 2005 by Princeton University.  All rights reserved.</string>
    <string name="wordnet_copyright_text_main">THIS SOFTWARE AND DATABASE IS PROVIDED "AS IS" AND PRINCETON UNIVERSITY MAKES NO REPRESENTATIONS OR WARRANTIES, EXPRESS OR IMPLIED.  BY WAY OF EXAMPLE, BUT NOT LIMITATION, PRINCETON UNIVERSITY MAKES NO REPRESENTATIONS OR WARRANTIES OF MERCHANT- ABILITY OR FITNESS FOR ANY PARTICULAR PURPOSE OR THAT THE USE OF THE LICENSED SOFTWARE, DATABASE OR DOCUMENTATION WILL NOT INFRINGE ANY THIRD PARTY PATENTS, COPYRIGHTS, TRADEMARKS OR OTHER RIGHTS.</string>
    <string name="apache_text">The Color Picker dialog source code is licensed under the Apache License 2.0.  You may obtain a copy of the license at http://www.apache.org/licenses/LICENSE-2.0.</string>
    <string name="contact_us_text">Follow us on Twitter @ezeeideas.  You can contact us with feedback and requests at ezeeideas@gmail.com.</string>
    <string name="aboutdialog_title">About</string>
    <string name="choose_word_type">Choose Word Type</string>
    <string name="wordtypelist_title">Word Types</string>
    <string name="words_heading">Words</string>
    <string name="words_title">Words</string>
    <string name="search_words_hint">Enter Text to Search</string>
    <string name="search_words">Search Words</string>
    <string name="browse_words">Browse Words</string>
    <string name="searchwords_title">Search Words</string>
    <string name="searchwords_heading">Words matching \""%1$s\"</string>
    <string name="search_no_results">No matching words found!  Please try searching for a different keyword.</string>
    <string name="wordmeaningtest_hinttext">Hint: One less choice to choose from!</string>
    <string name="wordmeaningtest_nomorehints">No more hints!</string>
    <string name="not_finished_yet">You\'re not finished yet!</string>
    <string name="not_all_right">Not all correct! Click Reveal to see the right answers.</string>
    <string name="matchwordstest_hinttext">Matched a pair!</string>
    <string name="matchwordstest_nomorehinttext">No more hints!</string>
    <string name="hangmantest_hinttext">Revealed a letter!</string>
    <string name="hangmantest_nomorehinttext">No more hints!</string>
    <string name="crosswordtest_hinttext">Revealed a word!</string>
    <string name="crosswordtest_nomorehinttext">No more hints!</string>
    <string name="wordsearchtest_hinttext">Revealed a word!</string>
    <string name="wordsearchtest_nomorehinttext">No more hints!</string>
    <string name="setupdb_progress_message">Initializing...</string>
    <string name="setupcrossword_progress_title"></string>
    <string name="setupcrossword_progress_message">Building Crossword...</string>
    <string name="help_title">%1$s - HELP</string>
    <string name="stop_help_text_all_tests">Use the Stop button to end the game and return to the main game selection screen.</string>
   <string name="reveal_help_text_all_tests">Use the Reveal button to reveal the answer to the current game.  You cannot continue on the same game once this has been chosen, and of course, you don\'t earn any points for it either!</string>
   <string name="pause_help_text_all_tests">Use the Pause button to pause a game.  The game will remain paused until you resume it.</string>
    <string name="hint_help_text_word_meaning_test">Use the Hint button to disable one of the active choices, so you\'re left with one less option to choose from.</string>
    <string name="theme_1_label">Sunset Orange</string>
    <string name="theme_2_label">Sky Blue</string>
    <string name="theme_3_label">Forest Green</string>
    <string name="theme_4_label">Electric Purple</string>
    <string name="theme_5_label">Coffee Time</string>
    <string name="theme_6_label">Custom Color</string>
    <string name="themes_heading">Choose a Theme</string>
    <string name="settings_title_label">Settings</string>
    <string name="setting_next_game_text_label">When moving to the next game, take me to</string>
    <string name="setting_next_game_same_label">A new game of the same type</string>
    <string name="setting_next_game_random_label">A new game of random type</string>
    <string name="setting_next_game_ask_label">Ask me what type of game to play next</string>
    <string name="setting_restore_game_text_label">When WordJam restarts, take me to</string>
    <string name="setting_home_screen_label">Home screen</string>
    <string name="setting_restore_game_label">Most recent game played</string>
    <string name="dialog_game_share_title_text">Share Game</string>
    <string name="dialog_game_share_description_text">Share this game with your friends on Facebook, or Invite your friends to play Word Jam!</string>
    <string name="dialog_game_share_footer_text">Tap anywhere else to cancel sharing</string>
    <string name="share_game_button_text">Share Game</string>
    <string name="invite_friends_button_text">Invite friends!</string>
    <string name="dialog_level_resume_game_title_text">Nothing to resume!</string>
    <string name="dialog_level_resume_game_text">You don\'t have any games to resume!  A new game will be started.</string>
    <string name="dialog_level_resume_game_footer_text">Tap anywhere to continue</string>
</resources>