<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/main_layout"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_vertical"
    android:padding="30dip"
    android:background="@color/background"
    >
<LinearLayout 
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    >
       	 <TextView
  	 	android:id="@+id/settings_title"
  	 	android:text="@string/settings_title_label"
      	android:layout_width="wrap_content"
      	android:layout_height="wrap_content"
      	android:textSize="25sp"
      	android:layout_gravity="center"
      	android:textColor="@color/text_color"
      />
       <View
    	android:layout_width="fill_parent"
    	android:layout_height="10dip"
    	/>
      
     	<LinearLayout
     	    android:layout_width="fill_parent"
     	    android:layout_height="wrap_content"
     	    android:orientation="vertical"
     	    >
     	    
    <TextView
        android:id="@+id/next_game_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_next_game_text_label"
        android:textColor="@color/black"
        />
    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <RadioButton
            android:id="@+id/same_game_type_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/setting_next_game_same_label"
            />
        <RadioButton
            android:id="@+id/random_game_type_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/setting_next_game_random_label"
            />
        <RadioButton
            android:id="@+id/ask_me_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/setting_next_game_ask_label"
            />
        
        
       </RadioGroup>
       
    
    <TextView
        android:id="@+id/restore_game_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_restore_game_text_label"
        android:textColor="@color/black"
        />
    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <RadioButton
            android:id="@+id/home_screen_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/setting_home_screen_label"
            />
        <RadioButton
            android:id="@+id/restore_game_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/setting_restore_game_label"
            />
        
       </RadioGroup>
       </LinearLayout>
    	 

       <View
    	android:layout_width="fill_parent"
    	android:layout_height="20dip"
    	/>
       
    	<ImageButton
    	android:id="@+id/back_button"
    	android:src="@drawable/test2"
    	android:layout_height="wrap_content"
    	android:layout_width="wrap_content"
    	android:layout_gravity="center"
        android:background="@color/transparent"
        ></ImageButton>
        
</LinearLayout>
</RelativeLayout>