<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/game_lower_layout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="0"
    android:orientation="vertical" >

    <View
        android:layout_width="fill_parent"
        android:layout_height="10dip" />

   	<View
   	    android:id="@+id/rule_footer"
   	    android:layout_width="fill_parent"
   	    android:layout_height="2dip"
   	    android:layout_gravity="bottom"
   	    android:background="@color/rule" />
    
    <LinearLayout
        android:id="@+id/game_button_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
   
   		<ImageButton
   		    android:id="@+id/stop_button"
   		    android:contentDescription="@string/stop_game_text"
   		    android:layout_width="0dip"
   		    android:layout_height="wrap_content"
   		    android:layout_weight="1"
   		    android:background="@color/transparent"
   		    android:src="@drawable/stop_button" />
   
      	<ImageButton
      	    android:id="@+id/pause_button"
      	    android:contentDescription="@string/pause_game_text"
      	    android:layout_width="0dip"
      	    android:layout_height="wrap_content"
      	    android:layout_weight="1"
      	    android:background="@color/transparent"
      	    android:src="@drawable/pause_button" />
        
        <ImageButton
            android:id="@+id/giveup_button"
            android:contentDescription="@string/giveup_game_text"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:src="@drawable/reveal_button" />
 
       	<ImageButton
           android:id="@+id/hint_button"
           android:contentDescription="@string/use_hint_text"
           android:layout_width="0dip"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:background="@color/transparent" 
           android:src="@drawable/hint_button"
           />
       	

   
 		<ImageButton
 		    android:id="@+id/help_button"
 		    android:contentDescription="@string/help_game_text"
 		    android:layout_width="0dip"
 		    android:layout_height="wrap_content"
 		    android:layout_weight="1"
 		    android:background="@color/transparent"
 		    android:src="@drawable/help_button" />
        
        <ImageButton
            android:id="@+id/previous_button"
            android:contentDescription="@string/previous_game_text"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:src="@drawable/previous_button" />
       
        <ImageButton
            android:id="@+id/next_button"
            android:contentDescription="@string/next_game_text"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:src="@drawable/next_button" />
        
	</LinearLayout>
	
   	<View
   	    android:id="@+id/rule_footer2"
   	    android:layout_width="fill_parent"
   	    android:layout_height="2dip"
   	    android:layout_gravity="bottom"
   	    android:background="@color/rule" />
</LinearLayout>