<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/main_layout"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_vertical"
    android:padding="20dip"
    android:background="@color/background"
    >
    <LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    >
    <TextView
  	 	android:id="@+id/themes_title"
  	 	android:text="@string/themes_heading"
      	android:layout_width="wrap_content"
      	android:layout_height="wrap_content"
      	android:textSize="25sp"
      	android:layout_gravity="center"
      	android:textColor="@color/text_color"
      />
      <ScrollView
 
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:layout_weight="1">
   <LinearLayout 
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
   
      <View
      	android:layout_height="15dip"
      	android:layout_width="fill_parent"
      	/>
      	  <LinearLayout 
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
    <Button
        android:id="@+id/theme_1_button"
        android:layout_width="0px"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:drawableLeft="@drawable/sunset_orange"
        android:text="@string/theme_1_label" />
    <Button
    	android:id="@+id/theme_2_button"
    	android:layout_width="0px"
    	android:layout_height="fill_parent"
    	android:layout_weight="1"
    	android:drawableLeft="@drawable/sky_blue"
    	android:text="@string/theme_2_label" />
    	</LinearLayout>
    	<LinearLayout 
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
    <Button
    	android:id="@+id/theme_3_button"
    	android:layout_width="0px"
    	android:layout_height="fill_parent"
    	android:layout_weight="1"
    	android:drawableLeft="@drawable/forest_green"
    	android:text="@string/theme_3_label" />
    	
    <Button
    	android:id="@+id/theme_4_button"
    	android:layout_width="0px"
    	android:layout_height="fill_parent"
    	android:layout_weight="1"
    	android:drawableLeft="@drawable/electric_purple"
    	android:text="@string/theme_4_label" />
</LinearLayout>
    	<LinearLayout 
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
    	   	<Button
    	android:id="@+id/theme_5_button"
    	android:layout_width="0px"
    	android:layout_height="fill_parent"
    	android:layout_weight="1"
    	android:drawableLeft="@drawable/coffee_time"
    	android:text="@string/theme_5_label" />
    	
    		   	<Button
    	android:id="@+id/theme_6_button"
    	android:layout_width="0px"
    	android:layout_height="fill_parent"
    	android:layout_weight="1"
    	android:drawableLeft="@drawable/custom_theme"
    	android:text="@string/theme_6_label" />
    	</LinearLayout>
    	
    	       <View
    	android:layout_width="fill_parent"
    	android:layout_height="20dip"
    	/>
    	        </LinearLayout>
        </ScrollView>
      
    	
    	<ImageButton
    	android:id="@+id/back_button"
    	android:src="@drawable/test2"
    	android:layout_height="wrap_content"
    	android:layout_width="wrap_content"
    	android:layout_gravity="center"
        android:background="@color/transparent"
        ></ImageButton>
    </LinearLayout>
    
     
        
</RelativeLayout>
