<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/main_layout"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_vertical"
    android:padding="30dip"
    android:background="@color/background"
    >
<LinearLayout 
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    >
           <TextView
  	 	android:id="@+id/play_chooser_title"
  	 	android:text="@string/play_chooser_title_label"
      	android:layout_width="wrap_content"
      	android:layout_height="wrap_content"
      	android:textSize="25sp"
      	android:layout_gravity="center"
      	android:textColor="@color/text_color"
      />
       <View
    	android:layout_width="fill_parent"
    	android:layout_height="10dip"
    	/>
       
       <ViewFlipper
           android:id="@+id/challenge_chooser_view_flipper"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:gravity="center"
           >
      
    <Button
        android:id="@+id/english_challenge_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/words"
        android:gravity="left|center_vertical"
        android:text="@string/english_challenge_label" />
    <Button
    	android:id="@+id/gre_challenge_button"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:drawableLeft="@drawable/take_a_test"
        android:gravity="left|center_vertical"
    	android:text="@string/gre_challenge_label" />
    <Button
    	android:id="@+id/sat_challenge_button"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:drawableLeft="@drawable/themes"
        android:gravity="left|center_vertical"
    	android:text="@string/sat_challenge_label" />
    <Button
    	android:id="@+id/kids_challenge_button"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:drawableLeft="@drawable/ic_launcher_wordjam"
        android:gravity="left|center_vertical"
    	android:text="@string/kids_challenge_label" />
    	 />
    	 </ViewFlipper>
       <View
    	android:layout_width="fill_parent"
    	android:layout_height="20dip"
    	/>
    	<ImageButton
    	android:id="@+id/back_button"
    	android:src="@drawable/test2"
    	android:layout_height="wrap_content"
    	android:layout_width="wrap_content"
    	android:layout_gravity="center"
        android:background="@color/transparent"
        ></ImageButton>
        
</LinearLayout>
</RelativeLayout>