<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/game_dialog_root_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:padding="10dp" >

        <ImageView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_marginRight="10dp"
        android:src="@drawable/facebook_button" />
        
    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_game_share_title_text"
            android:textColor="#FFFFFFFF"
            android:textSize="@dimen/dialog_title_text_size" />

        <View
            android:layout_height="10sp"
            android:layout_width="fill_parent"
            />
        
        <TextView
            android:id="@+id/dialog_game_share_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_game_share_description_text"
            android:textColor="#FFFFFFFF"
            android:textSize="@dimen/dialog_description_text_size" />
        
              
        <View
            android:layout_width="fill_parent"
            android:layout_height="10sp" />
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            
        <Button
            android:id="@+id/share_game_button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:text="@string/share_game_button_text"
            android:textSize="@dimen/ui_button_text_size"
            android:layout_weight="1"
            />
        
                <Button
            android:id="@+id/invite_friends_button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:text="@string/invite_friends_button_text"
            android:textSize="@dimen/ui_button_text_size"
            android:layout_weight="1"
            />
              
                </LinearLayout>
            
        <View
            android:layout_width="fill_parent"
            android:layout_height="10sp" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/dialog_game_share_footer_text"
            android:textColor="#FFFFFFFF"
            android:textSize="@dimen/dialog_continue_text_size" />

        </LinearLayout>
</LinearLayout>




    